# lama-triton

./: .gitignore  Dockerfile.triton  Makefile  PERFORMANCE.md  README.md  architecture.md  deployment_guide.md  docker-compose.yml  iopaint_workflow_analysis.md  main.py  pyproject.toml
docs/: api_schema.md
gateway/: Dockerfile
gateway/app/: main.py
gateway/app/core/: image_processing.py
gateway/app/schemas/: iopaint_schema.py
models/image_preprocessor/: config.pbtxt
models/lama_ensemble/: config.pbtxt
models/lama_pytorch/: config.pbtxt
notes/: troubleshooting.md
triton_backends/image_processing/: CMakeLists.txt
triton_backends/image_processing/src/: image_preprocessor.h  model.cc
